# automappy

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml  python-tests.yml
src/automappy/: exceptions.py  mapper.py
src/automappy/mappers/: class_mapper.py  collection_mapper.py  dataclass_mapper.py  mapping_mapper.py  object_mapper.py  primitive_mapper.py  registry.py
src/automappy/types/: type_pair.py
tests/: test_mapper.py
