[project]
name = "automappy"
version = "0.1.1"
description = "A convention-based object-object mapper in Python."

readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["pytest>=8.3.3", "ruff>=0.6.5"]
